--- a/CSS/nav.css
+++ b/CSS/nav.css
@@ -30,7 +30,7 @@
     top: 0;
     left: 0;
     width: 100;
-    background-color: #f5f5f5;
+    background-color: var(--secondary2-1);
     z-index: 9;
 }
 
@@ -62,7 +62,7 @@
     border-bottom-left-radius: 10px;
     border: 1px solid #d1d1d1;
     text-transform: capitalize;
-    background: none;
+    background: white;
     color: #a9a9a9;
     outline: none;
 }
@@ -99,7 +99,7 @@
     padding: 10px 10vw;
     justify-content: center;
     list-style: none;
-    border-top: 1px solid #d1d1d1;
+    border-top: 1px solid var(--secondary2-4);
 }
 
 .link{
@@ -107,8 +107,8 @@
     padding: 0 10px;
     margin: 0 5px;
     text-decoration: none;
-    color: #383838;
-    opacity: 0.5;
+    color: black ;
+    opacity: 0.9;
     transition: .5s;
 }
 
