--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -136,8 +136,7 @@
     text-decoration: line-through;
 }
 
-.pre-btn,
-.nxt-btn {
+.pre-btn, .nxt-btn{
     border: none;
     width: 10vw;
     height: 100%;
@@ -151,22 +150,20 @@
     z-index: 8;
 }
 
-.pre-btn {
+.pre-btn{
     left: 0;
     transform: rotate(180deg);
 }
 
-.nxt-btn {
+.nxt-btn{
     right: 0;
 }
 
-.pre-btn img,
-.nxt-btn img {
+.pre-btn img, .nxt-btn img{
     opacity: 0.2;
 }
 
-.pre-btn:hover img,
-.nxt-btn:hover img {
+.pre-btn:hover img, .nxt-btn:hover img{
     opacity: 1;
 }
 
