--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -26,15 +26,28 @@
 
 .hero-section{
     width: 100%;
-    min-height: 200px;
-    background-image: url(../Images/Logos/background-finish.jpg);
-    background-size:cover;
-    background-repeat: none;
-    display:flex;
+    height: calc(100vh - 120px);
+    background-image: url('../Images/Logos/logo-header.png');
+    background-size: cover;
+    display: flex;
     justify-content: center;
     align-items: center;
 }
 
+.hero-section .logo{
+    height: 150px;
+    display:none;
+    margin: auto;
+}
+
+.hero-section .sub-heading{
+    margin-top: 10px;
+    text-align: center;
+    color: #fff;
+    text-transform: capitalize;
+    font-size: 35px;
+    font-weight: 300;
+}
 .product-container {
     padding: 0 10vw;
     display: flex;
@@ -130,11 +143,6 @@
     font-size: 20px;
 }
 
-.actual-price {
-    margin-left: 20px;
-    opacity: 0.5;
-    text-decoration: line-through;
-}
 
 .pre-btn, .nxt-btn{
     border: none;
@@ -166,28 +174,27 @@
 .pre-btn:hover img, .nxt-btn:hover img{
     opacity: 1;
 }
-
-.collection-container {
+.sell{
+    text-align: center;
+}
+.collection-container{
     width: 100%;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 10px;
 }
-.collection-container h2{
-    text-align: center;
-}
 
-.collection {
+.collection{
     position: relative;
 }
 
-.collection img {
+.collection img{
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
 
-.collection p {
+.collection p{
     position: absolute;
     top: 50%;
     left: 50%;
@@ -198,7 +205,7 @@
     text-transform: capitalize;
 }
 
-.collection:nth-child(3) {
+.collection:nth-child(3){
     grid-column: span 2;
     margin-bottom: 10px;
 }
