--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -4,28 +4,28 @@
 @import 'credit.css';
 
 
-:root{ 
-/* Primary colors */
-    --primary1:#E2F1CB;
-    --primary2:#D3EBAF;
-    --primary0:#B6D586;
-    --primary3:#99BE60;
-    --primary4:#7AA43A;
-/* Secondary Colors 1 */
-    --secondary1-1:#FFE0D7;
-    --secondary1-2:#FFCCBE;
-    --secondary1-0:#E7A592;
-    --secondary1-3:#CE7F68;
-    --secondary1-4:#B2593F;
-/* Secondary Colors 2 */
-    --secondary2-1:#B8A6C3;
-    --secondary2-2:#9B82AB;
-    --secondary2-0:#86659B;
-    --secondary2-3:#71498A;
-    --secondary2-4:#5B2F77;
+:root {
+    /* Primary colors */
+    --primary1: #E2F1CB;
+    --primary2: #D3EBAF;
+    --primary0: #B6D586;
+    --primary3: #99BE60;
+    --primary4: #7AA43A;
+    /* Secondary Colors 1 */
+    --secondary1-1: #FFE0D7;
+    --secondary1-2: #FFCCBE;
+    --secondary1-0: #E7A592;
+    --secondary1-3: #CE7F68;
+    --secondary1-4: #B2593F;
+    /* Secondary Colors 2 */
+    --secondary2-1: #B8A6C3;
+    --secondary2-2: #9B82AB;
+    --secondary2-0: #86659B;
+    --secondary2-3: #71498A;
+    --secondary2-4: #5B2F77;
 }
 
-.hero-section{
+.hero-section {
     width: 100%;
     height: calc(100vh - 120px);
     background-image: url('../img/Logos/logo-header.png');
@@ -35,38 +35,43 @@
     align-items: center;
 }
 
-.hero-section .logo{
+.hero-section .logo {
     height: 150px;
-    display:none;
+    display: none;
     margin: auto;
 }
-.hero-section .sub-heading{
-    color:white;
+
+.hero-section .sub-heading {
+    color: white;
     font-size: 45px;
 }
 
-.product{
+.product {
     background-color: var(--secondary1-1);
     padding-top: 5px;
 }
-.product h2{
-    padding:3px;
+
+.product h2 {
+    padding: 3px;
 }
+
 .product-container {
     padding: 0 10vw;
     display: flex;
     overflow-x: auto;
     scroll-behavior: smooth;
-    height: 500px ;
+    height: 500px;
 }
 
 .product-container::-webkit-scrollbar {
     display: none;
 }
-.best-seller{
+
+.best-seller {
     text-align: center;
     text-transform: capitalize;
 }
+
 .product-card {
     flex: 0 0 auto;
     width: 250px;
@@ -141,7 +146,7 @@
     opacity: 0.85;
     text-transform: capitalize;
     margin: 5px 0;
-    color:black;
+    color: black;
 }
 
 .price {
@@ -149,7 +154,8 @@
     font-size: 20px;
 }
 
-.pre-btn, .nxt-btn{
+.pre-btn,
+.nxt-btn {
     border: none;
     width: 10vw;
     height: 50%;
@@ -162,44 +168,47 @@
     z-index: 8;
 }
 
-.pre-btn{
+.pre-btn {
     left: 0;
     transform: rotate(180deg);
 }
 
-.nxt-btn{
+.nxt-btn {
     right: 0;
 }
 
-.pre-btn img, .nxt-btn img{
+.pre-btn img,
+.nxt-btn img {
     opacity: 0.2;
 }
 
-.pre-btn:hover img, .nxt-btn:hover img{
+.pre-btn:hover img,
+.nxt-btn:hover img {
     opacity: 1;
 }
 
-.sell{
+.sell {
     text-align: center;
 }
-.collection-container{
+
+.collection-container {
     width: 100%;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 10px;
 }
 
-.collection{
+.collection {
     position: relative;
 }
 
-.collection img{
+.collection img {
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
 
-.collection p{
+.collection p {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -210,10 +219,11 @@
     text-transform: capitalize;
 }
 
-.collection:nth-child(3){
+.collection:nth-child(3) {
     grid-column: span 2;
     margin-bottom: 10px;
 }
-#product-page .product-card{
+
+#product-page .product-card {
     width: 33%;
 }
