--- a/CSS/credit.css
+++ b/CSS/credit.css
@@ -1,22 +1,44 @@
-* {
-    box-sizing: border-box;
-  }
-  
-  .column {
-    float: left;
-    width: 33.33%;
-    padding: 5px;
-  }
-  
-  .row::after {
-    content: "";
-    clear: both;
-    display: table;
-  }
-  
-  /* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
-  @media screen and (max-width: 500px) {
-    .column {
-      width: 100%;
-    }
-  }
+.product-container {
+    padding: 0 10vw;
+    display: flex;
+    overflow-x: auto;
+    scroll-behavior: smooth;
+    height: 500px;
+}
+
+.product-container::-webkit-scrollbar {
+    display: none;
+}
+
+.credit-pre,
+.credit-nxt {
+    border: none;
+    width: 10vw;
+    height: 25%;
+    position: absolute;
+    top: 30vh;
+    justify-content: center;
+    align-items: center;
+    background: linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, #fff 100%);
+    cursor: pointer;
+    z-index: 8;
+}
+
+.credit-pre {
+    left: 0;
+    transform: rotate(180deg);
+}
+
+.credit-nxt {
+    right: 0;
+}
+
+.credit-pre img,
+.credit-nxt img {
+    opacity: 0.2;
+}
+
+.credit-pre:hover img,
+.credit-nxt:hover img {
+    opacity: 1;
+}
