--- a/CSS/nav.css
+++ b/CSS/nav.css
@@ -14,29 +14,9 @@
     font-family: 'Roboto', sans-serif;
 }
 
-.navbar {
-    top: 0;
-    left: 0;
-    width: 100;
-    background-color: var(--light);
-    z-index: 9;
-}
-
-.nav {
-    padding: 10px 10vw;
-    display: flex;
-    justify-content: space-between;
-}
-
-.nav-items {
-    display: flex;
-    align-items: center;
-}
-.brand-logo{
-    height: 100px;
-    width: 150px;
-}
 /* Start of the sign up form button */
+
+
 input[type=text], input[type=password] {
     width: 100%;
     padding: 15px;
@@ -59,7 +39,7 @@ input[type=text], input[type=password] {
   button{
     height: 32px;
     width:45px;
-    background-color: #04AA6D;
+    background-color:var(--light);
   color: white;
   padding: 14px 20px;
   margin: 8px 0;
@@ -69,13 +49,13 @@ input[type=text], input[type=password] {
   opacity: 0.9;
 
   }
-  .user button{
-    background-color: var(--light);
-  }
+  
    button:hover {
     opacity:1;
   }
-  
+  .signupbtn{
+    background-color:#04AA6D ;
+  }
   
   .cancelbtn {
     padding: 14px 20px;
@@ -136,6 +116,12 @@ input[type=text], input[type=password] {
     content: "";
     clear: both;
     display: table;
+  }
+  .user{
+    width:50px;
+    height:50px;
+    justify-content: center;
+    background-color: none;
   }
   
   @media screen and (max-width: 300px) {
@@ -211,4 +197,28 @@ input[type=text], input[type=password] {
 .link:hover{
     opacity: 1;
     background-color: var(--light-hover);
+}
+
+
+.navbar {
+  top: 0;
+  left: 0;
+  width: 100;
+  background-color: var(--light);
+  z-index: 9;
+}
+
+.nav {
+  padding: 10px 10vw;
+  display: flex;
+  justify-content: space-between;
+}
+
+.nav-items {
+  display: flex;
+  align-items: center;
+}
+.brand-logo{
+  height: 100px;
+  width: 150px;
 }
