--- a/CSS/nav.css
+++ b/CSS/nav.css
@@ -1,45 +1,50 @@
 :root {
-    --light: #f29544;
-    --light-hover: #dc883e;
-    --medium: #a67665;
-    --medium-dark: #733a2d;
-    --dark:  #59332a;
-    --really-dark: #261f1d;
-  }
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Roboto', sans-serif;
+  --light: #f29544;
+  --light-hover: #dc883e;
+  --medium: #a67665;
+  --medium-dark: #733a2d;
+  --dark: #59332a;
+  --really-dark: #261f1d;
 }
 
-/* Start of the sign up form button */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Roboto', sans-serif;
+}
 
+.tabcontent {
+  color: black;
+  padding: 100px 20px;
+  height: 100%;
+}
 
-input[type=text], input[type=password] {
-    width: 100%;
-    padding: 15px;
-    margin: 5px 0 22px 0;
-    display: inline-block;
-    border: none;
-    background: #f1f1f1;
-  }
-  
-  input[type=text]:focus, input[type=password]:focus {
-    background-color: #ddd;
-    outline: none;
-  }
-  
-  hr {
-    border: 1px solid #f1f1f1;
-    margin-bottom: 25px;
-  }
-  
-  button{
-    height: 32px;
-    width:45px;
-    background-color:var(--light);
+input[type=text],
+input[type=password] {
+  width: 100%;
+  padding: 15px;
+  margin: 5px 0 22px 0;
+  display: inline-block;
+  border: none;
+  background: #f1f1f1;
+}
+
+input[type=text]:focus,
+input[type=password]:focus {
+  background-color: #ddd;
+  outline: none;
+}
+
+hr {
+  border: 1px solid #f1f1f1;
+  margin-bottom: 25px;
+}
+
+button {
+  height: 32px;
+  width: 45px;
+  background-color: var(--light);
   color: white;
   padding: 14px 20px;
   margin: 8px 0;
@@ -48,155 +53,179 @@ input[type=text], input[type=password] {
   width: 100%;
   opacity: 0.9;
 
-  }
-  
-   button:hover {
-    opacity:1;
-  }
-  .signupbtn{
-    background-color:#04AA6D ;
-  }
-  
-  .cancelbtn {
-    padding: 14px 20px;
-    background-color: #f44336;
-  }
-  
+}
 
-  .cancelbtn, .signupbtn {
-    float: left;
-    width: 50%;
-  }
-  
-  .container {
-    padding: 16px;
-  }
-  
-  .modal{
-    display:none;
-    position:fixed;
-    z-index:1;
-    left:0;
-    top: 0;
+button:hover {
+  opacity: 1;
+}
+
+.signupbtn {
+  background-color: #04AA6D;
+}
+
+.cancelbtn {
+  padding: 14px 20px;
+  background-color: #f44336;
+}
+
+
+.cancelbtn,
+.signupbtn {
+  float: left;
+  width: 50%;
+}
+
+.container {
+  padding: 16px;
+}
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: #474e5d;
+  padding-top: 50px;
+}
+
+.modal-content {
+  background-color: #fefefe;
+  margin: 5% auto 15% auto;
+  border: 1px solid #888;
+  width: 80%;
+}
+
+.signup-form {
+  border: 1px solid #f1f1f1;
+  margin-bottom: 25px;
+}
+
+.close {
+  position: absolute;
+  right: 35px;
+  top: 15px;
+  font-size: 40px;
+  font-weight: bold;
+  color: #f1f1f1;
+}
+
+.close:hover,
+.close:focus {
+  color: #f44336;
+  cursor: pointer;
+}
+
+.clearfix::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+.user {
+  width: 50px;
+  height: 50px;
+  justify-content: center;
+  background-color: none;
+}
+
+@media screen and (max-width: 300px) {
+
+  .cancelbtn,
+  .signupbtn {
     width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: #474e5d;
-    padding-top: 50px;
   }
-  
-  .modal-content{
-     background-color: #fefefe;
-    margin: 5% auto 15% auto;
-    border: 1px solid #888;
-    width: 80%;
-  }
-  
-  .signup-form {
-    border: 1px solid #f1f1f1;
-    margin-bottom: 25px;
-  }
-  
-  .close {
-    position: absolute;
-    right: 35px;
-    top: 15px;
-    font-size: 40px;
-    font-weight: bold;
-    color: #f1f1f1;
-  }
-  
-  .close:hover,
-  .close:focus {
-    color: #f44336;
-    cursor: pointer;
-  }
-  
-  .clearfix::after {
-    content: "";
-    clear: both;
-    display: table;
-  }
-  .user{
-    width:50px;
-    height:50px;
-    justify-content: center;
-    background-color: none;
-  }
-  
-  @media screen and (max-width: 300px) {
-    .cancelbtn, .signupbtn {
-       width: 100%;
-    }
-  }
+}
 
 
 .search {
-    width: 500px;
-    display: flex;
+  width: 500px;
+  display: flex;
 }
 
 .search-box {
-    width: 80%;
-    height: 40px;
-    padding: 10px;
-    border-top-left-radius: 10px;
-    border-bottom-left-radius: 10px;
-    border: 1px solid #d1d1d1;
-    text-transform: capitalize;
-    background: white;
-    color: #a9a9a9;
-    outline: none;
+  width: 80%;
+  height: 40px;
+  padding: 10px;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+  border: 1px solid #d1d1d1;
+  text-transform: capitalize;
+  background: white;
+  color: #a9a9a9;
+  outline: none;
 }
 
 .search-btn {
-    width: 20%;
-    height: 40px;
-    padding: 10px 20px;
-    border: none;
-    outline: none;
-    cursor: pointer;
-    background: #383838;
-    color: #fff;
-    text-transform: capitalize;
-    font-size: 15px;
-    border-top-right-radius: 10px;
-    border-bottom-right-radius: 10px;
+  width: 20%;
+  height: 40px;
+  padding: 10px 20px;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  background: #383838;
+  color: #fff;
+  text-transform: capitalize;
+  font-size: 15px;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
 }
 
 .search-box::placeholder {
-    color: #a9a9a9;
+  color: #a9a9a9;
 }
 
 .nav-items a {
-    margin-left: 20px;
+  margin-left: 20px;
 }
 
 .nav-items a img {
-    width: 30px;
-}
-.link-container{
-    width: 100%;
-    display: flex;
-    padding: 10px 10vw;
-    justify-content: center;
-    list-style: none;
-    border-top: 1px solid var(--medium-dark);
+  width: 30px;
 }
 
-.link{
-    text-transform: capitalize;
-    padding: 0 10px;
-    margin: 0 5px;
-    text-decoration: none;
-    color: black ;
-    opacity: 0.9;
-    transition: .5s;
+.link-container {
+  width: 100%;
+  display:flex;
+  padding: 10px 10vw;
+  justify-content: center;
+  list-style: none;
+  border-top: 1px solid var(--medium-dark);
+}
+.link-item{
+  text-transform: capitalize;
+  padding: 0 10px;
+  margin: 0 5px;
+  text-decoration: none;
+  color: black;
+  opacity: 0.9;
+  transition: .5s;
 }
 
-.link:hover{
-    opacity: 1;
-    background-color: var(--light-hover);
+.link-item:hover{
+  text-transform: capitalize;
+  padding: 0 10px;
+  margin: 0 5px;
+  text-decoration: none;
+  color: black;
+  opacity: 0.9;
+  transition: .5s;
+}
+.link {
+  text-transform: capitalize;
+  padding: 0 10px;
+  margin: 0 5px;
+  text-decoration: none;
+  color: black;
+  opacity: 0.9;
+  transition: .5s;
+}
+
+.link:hover {
+  opacity: 1;
+  background-color: var(--light-hover);
 }
 
 
@@ -218,42 +247,8 @@ input[type=text], input[type=password] {
   display: flex;
   align-items: center;
 }
-.brand-logo{
+
+.brand-logo {
   height: 100px;
   width: 150px;
-}
-.tab {
-  overflow: hidden;
-  border: 1px solid #ccc;
-  background-color: var(--light);
-}
-
-
-.tab button {
-  background-color: inherit;
-  float: left;
-  display:flex;
-  border: none;
-  outline: none;
-  cursor: pointer;
-  padding: 14px 16px;
-  transition: 0.3s;
-}
-
-
-.tab button:hover {
-  background-color: var(--light-hover);
-}
-
-
-.tab button.active {
-  background-color: var(--light-hover);
-}
-
-
-.tabcontent {
-  display: none;
-  padding: 6px 12px;
-  border: 1px solid #ccc;
-  border-top: none;
 }
