--- a/CSS/nav.css
+++ b/CSS/nav.css
@@ -75,29 +75,30 @@ button:hover {
   opacity: 1;
 }
 
+ .tab-link  {
+  height: 25px;
+  width: 45px;
+  background-color: var(--light);
+  color: white;
+  padding: 10px 10px;
+  margin: 8px 0;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  text-decoration: none;
+}
 .signupbtn {
   background-color: var(--light);
   width: 300px;
     height: 40px;
     opacity:1;
-}
-
-.cancelbtn {
-  padding: 14px 20px;
-  background-color: #f44336;
-  width: 300px;
-    height: 40px;
-}
-
-
-.cancelbtn,
-.signupbtn {
   float: left;
   width: 50%;
 }
 
 .container {
   padding: 16px;
+  height: 400px;
 }
 label{
   text-transform: capitalize;
@@ -130,9 +131,9 @@ label a{
   left: 0;
   top: 0;
   width: 100%;
-  height: 100%;
+  height: 200%;
   overflow: auto;
-  background-color: #474e5d;
+  background-color: transparent;
   padding-top: 50px;
 }
 
@@ -192,7 +193,7 @@ hr .signup-form{
 }
 
 .search-box {
-  width: 80%;
+  width: 90vw;
   height: 40px;
   padding: 10px;
   border-top-left-radius: 10px;
@@ -206,6 +207,7 @@ hr .signup-form{
 
 .search-btn {
   width: 20%;
+  margin-top: 2.2vh;
   height: 40px;
   padding: 10px 20px;
   border: none;
@@ -265,11 +267,12 @@ hr .signup-form{
   color: black;
   opacity: 0.9;
   transition: .5s;
+  position:inline;
 }
 
 .link:hover {
   opacity: 1;
-  background-color: var(--light-hover);
+  text-decoration: underline;
 }
 
 
@@ -293,7 +296,4 @@ hr .signup-form{
   height:154px;
   margin:0;
   padding:0;
-}
-.tablink .collection-title{
-  opacity: 1;
 }
