--- a/CSS/product.css
+++ b/CSS/product.css
@@ -1,5 +1,6 @@
 @import "nav.css";
 @import "footer.css";
+@import "styles.css";
 
 :root {
   --light: #f29544;
@@ -9,39 +10,47 @@
   --really-dark: #261f1d;
 }
 
-.card{
+
+
+.card {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   max-width: 300px;
-  margin:35px;
-  text-align:center;
-  font-family:Arial, Helvetica, sans-serif ;
-  height:400px;
+  height: 400px;
+  margin:30px;
+  text-align: center;
+  font-family: arial;
 }
 .card img{
-  height:270px;
+  width: 200px;
+  height: 200px;
 }
-  .price{
-  color:var(--medium-dark);
-  font-size:22px;
- }
- .card button{
-  border:none;
-  outline:0;
-  cursor: pointer;
-  padding:12px;
-  color:var(--dark);
-  width: 100%;
-  font-size:18px;
- }
+.price {
+  color: grey;
+  font-size: 22px;
+}
 
+.card button {
+  border: none;
+  outline: 0;
+  padding: 12px;
+  color: var(--really-dark);
+  background-color: var(--light);
+  text-align: center;
+  cursor: pointer;
+  width: 100%;
+  font-size: 18px;
+}
+
+.card button:hover {
+  opacity: 0.7;
+}
 .column{
   float:left;
   width:33.33%;
-  padding:5px;
+  padding:30px;
 }
 .row::after{
   content:"";
   clear:both;
   display:table;
 }
-
