--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -444,10 +444,10 @@ hr .signup-form{
 }
 .pre-btn, .nxt-btn{
   border: none;
-  width: 6vw;
-  height: 50%;
+  width: 10vw;
+  height: 65%;
   position: absolute;
-  top: 120vh;
+  top: 133vw;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -465,6 +465,13 @@ hr .signup-form{
   right: 0;
 }
 
+.pre-btn img, .nxt-btn img{
+  opacity: 0.2;
+}
+
+.pre-btn:hover img, .nxt-btn:hover img{
+  opacity: 1;
+}
 .sell {
   text-align: center;
 }
