--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -331,10 +331,9 @@ hr .signup-form{
 }
 /* This is the home page */
 .product {
-  color: var(--light);
   padding-top: 5px;
-  background-color: var(--medium-dark);
   margin-top: 30px;
+  background-color: #fcedcf;
 }
 
 .product h2 {
@@ -359,53 +358,32 @@ hr .signup-form{
 }
 
 .product-card {
-  flex: 0 0 auto;
-  width: 250px;
-  height: 450px;
-  margin-right: 40px;
-  position: relative;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  max-width: 300px;
+  height: 400px;
+  margin:30px;
+  text-align: center;
+  font-family: arial;
+  width:40%;
 }
 
-.product-image {
-  position: relative;
-  width: 100%;
-  height: 350px;
-  overflow: hidden;
-}
 
 .product-thumb {
-  width: 100%;
-  height: 350px;
-  object-fit: cover;
+  width: 200px;
+  height: 200px;
 }
 
-.discount-tag {
-  position: absolute;
-  background: #fff;
-  padding: 5px;
-  border-radius: 5px;
-  color: #ff7d7d;
-  right: 10px;
-  top: 10px;
-  text-transform: capitalize;
-}
 
 .card-btn {
-  position: absolute;
-  bottom: 10px;
-  left: 50%;
-  transform: translateX(-50%);
-  padding: 10px;
-  width: 90%;
-  text-transform: capitalize;
   border: none;
-  outline: none;
-  background: #fff;
-  border-radius: 5px;
-  transition: 0.5s;
+  outline: 0;
+  padding: 12px;
+  color: var(--really-dark);
+  background-color: var(--light);
+  text-align: center;
   cursor: pointer;
-  opacity: 0;
-  color:var(--really-dark)
+  width: 100%;
+  font-size: 18px;
 }
 
 .product-card:hover .card-btn {
@@ -413,36 +391,10 @@ hr .signup-form{
 }
 
 .card-btn:hover {
-  background: #efefef;
+  background: var(--light-hover);
 }
 
-.product-info {
-  width: 100%;
-  height: 100px;
-  padding-top: 10px;
-}
 
-.product-brand {
-  text-transform: uppercase;
-  font-family: "Crete Round", serif;
-}
-
-.product-short-des {
-  width: 100%;
-  height: 20px;
-  line-height: 20px;
-  overflow: hidden;
-  opacity: 0.85;
-  text-transform: capitalize;
-  margin: 5px 0;
-  color: black;
-}
-
-.price {
-  font-weight: 900;
-  font-size: 20px;
-  font-family: "Crete Round", serif;
-}
 .pre-btn, .nxt-btn{
   border: none;
   width: 10vw;
